# ntpu-past-exam-service

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  export_requirements.sh  main.py  pyproject.toml  requirements.txt  vercel.json
alembic/: alembic.ini  env.py
alembic/versions/: 02a39342a98c_db_migration_add_index_to_user_.py  0f40557ac560_db_migration_department_admin.py  12c57b79eb64_add_user_preferences_table.py  15c70c3a65d3_db_migration_departments.py  1e84a29b4b4d_add_department_sort_order.py  204127fb3744_db_migration_mutiple_files.py  2555095e0ae9_add_default_is_anonymous.py  26d05dc9a63d_db_migration_post.py  3e0d6835822e_db_migration_username.py  41c05f3eb95f_db_migration.py  4da81afb7b6c_db_migration_school_department.py  509a35d8aa05_db_migration_post.py  56947cc2d6e0_db_migration_add_related_with_department.py  5a8d5b637728_db_migration_bulletin.py  65aab4d0944f_db_migration_request_status_default_.py  65c84c08c11f_db_migration_user_id.py  6938c4e11d73_db_migration_user_name.py  6e02a84a57e2_db_migration_use_uui_das_id.py  7577872e42b4_db_migration_add_index_to_user_.py  79eb4c2e02f3_db_migration_departments_courses.py  7b089676aa69_db_migration_post_is_migrate.py  7fe87bc72a0a_fix_thread_tables_collation.py  (+21 more)
auth/: dependencies.py  router.py
bulletins/: dependencies.py  models.py  router.py
courses/: dependencies.py  models.py  router.py  schemas.py
departments/: dependencies.py  models.py  router.py
items/: models.py  router.py  schemas.py
posts/: dependencies.py  models.py  router.py  schemas.py
routers/: users.py
scripts/: seed.py  set_department_order.py
sql/: crud.py  database.py  models.py  schemas.py
static_file/: r2.py
thread/: dependencies.py  models.py  router.py  schemas.py
users/: dependencies.py  models.py  router.py  schemas.py
utils/: cache.py  exception_handlers.py  log.py  send_mail.py  token.py
