[tool.poetry]
name = "ntpu-past-exam-service"
version = "0.1.0"
description = ""
authors = ["david <f312213213david@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pylint = "^3.0.2"
black = "^23.11.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"
poetry-plugin-export = "^1.6.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
