[tool.poetry]
name = "ntpu-past-exam-service"
version = "0.1.0"
description = ""
authors = ["david <f312213213david@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pylint = "^3.0.2"
black = "^23.11.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"
poetry-plugin-export = "^1.6.0"
sqlalchemy = "^2.0.23"
load-dotenv = "^0.1.0"
mysql-connector-python = "^8.2.0"
alembic = "^1.12.1"
boto3 = "^1.29.6"
urllib3 = ">=1.25.4,<1.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
