[tool.poetry]
name = "ntpu-past-exam-service"
version = "0.1.0"
description = ""
authors = ["david <f312213213david@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pylint = "^3.3.0"
black = "^25.1.0"
pre-commit = "^4.0.0"
isort = "^6.0.0"
poetry-plugin-export = "^1.8.0"
sqlalchemy = "^2.0.36"
load-dotenv = "^0.1.0"
mysql-connector-python = "^9.1.0"
alembic = "^1.14.0"
boto3 = "^1.36.0"
bcrypt = "^4.2.0"
python-multipart = "^0.0.20"
python-jose = "^3.4.0"
beautifulsoup4 = "^4.13.0"
logtail-python = "^0.3.0"
gunicorn = "^23.0.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
